# PCBEnv

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml
Dependencies/: README.md  install.py
doc/: API.md  Actions.md  Code.md  StateRepresentations.md  actions.json  doxy.config  states.json
pcbenv/: __init__.py  playground.py
pcbenv/cxx/: AABBTree.cpp  AShape.cpp  AShape.hpp  AShapeInexact.cpp  AStar.hpp  BVH.hpp  CMakeLists.txt  Clone.hpp  Color.cpp  Color.hpp  Component.cpp  Component.hpp  Connection.cpp  Connection.hpp  DRC.cpp  DRC.hpp  Defs.hpp  Enums.cpp  Enums.hpp  Env.cpp  Env.hpp  Env.i  EnvPCB.cpp  EnvPCB.hpp  Geometry.hpp  GridDirection.cpp  GridDirection.hpp  Layer.cpp  Layer.hpp  LayoutArea.cpp  LayoutArea.hpp  Log.cpp  Log.hpp  NavGrid.cpp  NavGrid.hpp  NavImage.cpp  NavImage.hpp  NavPoint.hpp  NavTriangulation.cpp  NavTriangulation.hpp  (+30 more)
pcbenv/cxx/Loaders/: DSN.hpp  DSNParser.cpp  DSNParserBase.cpp  DSNParserBase.hpp  Factory.cpp  Factory.hpp  JSONParser.cpp  KiCADParser.cpp  LoaderDSN.cpp  RouteTracker.cpp  RouteTracker.hpp  Topology.hpp
pcbenv/cxx/Math/: IPoint2.hpp  IPoint3.hpp  LubySequence.hpp  Mat4.cpp  Mat4.hpp  Misc.hpp  Moments.hpp
pcbenv/cxx/RL/: Action.cpp  Action.hpp  ActionCache.hpp  ActionSpace.cpp  ActionSpace.hpp  Agent.cpp  Agent.hpp  CommonActions.hpp  CommonStateReprs.hpp  Policy.cpp  Policy.hpp  RRRAgent.cpp  RRRAgent.hpp  Reward.cpp  Reward.hpp  StateRepresentation.cpp  StateRepresentation.hpp  Stats.cpp  Stats.hpp  UserAgent.cpp  UserAgent.hpp
pcbenv/cxx/RL/Actions/: AddSegment.cpp  AddSegment.hpp  Grid.cpp  Grid.hpp  LayerMask.cpp  LayerMask.hpp  Route.cpp  Route.hpp  RouteAStar.cpp  RouteAStar.hpp  SetTrack.cpp  SetTrack.hpp  Unroute.cpp  Unroute.hpp
pcbenv/cxx/RL/State/: DRCheck.cpp  DRCheck.hpp  Endpoints.cpp  Endpoints.hpp  Features.cpp  Features.hpp  Grid.cpp  Grid.hpp  ImageLike.cpp  ImageLike.hpp  Items.cpp  Items.hpp  Metrics.cpp  Metrics.hpp  Tracks.cpp  Tracks.hpp
pcbenv/cxx/UI/: ActionTab.cpp  ActionTab.hpp  Actions.cpp  Actions.hpp  Application.cpp  Application.hpp  BrowserTab.cpp  BrowserTab.hpp  Camera.cpp  Camera.hpp  GLContext.hpp  GLWidget.cpp  GLWidget.hpp  Helper.cpp  Helper.hpp  LockStep.hpp  NavGrid.cpp  NavGrid.hpp  NavMesh.cpp  NavMesh.hpp  PCBoardMesh.cpp  PCBoardMesh.hpp  ParameterTab.cpp  ParameterTab.hpp  RatsNest.cpp  RatsNest.hpp  RoutePainter.hpp  RoutePainterLines.cpp  RoutePainterLines.hpp  RoutePainterPretty.cpp  Shaders.cpp  Shaders.hpp  TriList.cpp  TriList.hpp  ViaPainter.cpp  ViaPainter.hpp  ViewTab.cpp  ViewTab.hpp  Window.cpp  Window.hpp
pcbenv/cxx/UI/Qt/: Loader.hpp  QApp.cpp  QApp.hpp
pcbenv/cxx/Util/: FancyLock.hpp  HugePageAllocator.hpp  Metrics.cpp  Metrics.hpp  PCBItemSets.cpp  PCBItemSets.hpp  Pusher.cpp  Pusher.hpp  Util.cpp  Util.hpp
pcbenv/data/: pcb.schema.json  settings.json  settings.schema.json  task.schema.json
pcbenv/data/boards/: download.py
pcbenv/data/ui/glsl/: basic.vs.glsl  basic_color-flat.vs.glsl  basic_color.fs.glsl  basic_color.vs.glsl  board_mesh.fs.glsl  board_mesh.vs.glsl  hilight_mesh.fs.glsl  nav_grid.fs.glsl  nav_mesh.fs.glsl  nav_mesh.vs.glsl  rats_nest.fs.glsl  round_mesh.fs.glsl  round_mesh.vs.glsl  routes-pretty.fs.glsl  routes-pretty.vs.glsl  routes.fs.glsl  routes.vs.glsl  tri_list.fs.glsl  via.fs.glsl  via.vs.glsl
pcbenv/data/ui/qt/: action_tab.ui  browser_tab.ui  view_tab.ui
pcbenv/tests/: 000-json-format.py  001-dsn-format.py  002-states.py  003-rrr.py  004-unroute-grid-integrity.py  005-wide-segments.py  006-actions.py  args.py  log.py
pcbenv/util/: board_to_svg.py  json_pcb.py
pcbenv/util/math/: vec2.py
pcbenv/util/plot/: image.py
