[build-system]
requires = ["scikit-build-core>=0.8", "swig", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "pcbenv"
version = "2026.1.0"
requires-python = ">=3.7"
authors = [
  {name = "Christoph Bumiller", email = "fluegelklang@gmail.com"}
]
description = "PCB routing reinforcement learning environment"
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE.txt"]
keywords = ["gym", "pcb"]
classifiers = [
  "Development Status :: 3 - Alpha",
   "Intended Audience :: Science/Research",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)"
]

[tool.scikit-build]
wheel.packages = ["pcbenv"]
cmake.verbose = true